# Sentinel-MCP

./: .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  SECURITY_AUDIT.md  VULNERABILITY_FIXES.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_output.txt
.claude/: settings.json
.claude/agents/: phase-runner.md
.claude/skills/phase-docs/: SKILL.md
.claude/skills/phase-test/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
deploy/: DEPLOY-HUGGINGFACE.md  DEPLOY.md
docker/: init-keycloak-db.sql  otel-collector-config.yml
docs/phases/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md
docs/test-reports/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md
huggingface/: Caddyfile  Dockerfile  README.md  entrypoint.sh  supervisord.conf
keycloak/: realm-export.json
landing/: index.html
policies/: authz.rego  rate_limit.rego
policies/data/: rate_limits.json  roles.json
scripts/: doc_agent.py  testing_agent.py
sentinel/: __init__.py  config.py  main.py  secrets.py
sentinel/adapters/: abuse_ch.py  abuseipdb.py  alienvault.py  anthropic_adapter.py  base.py  circl.py  dnsbl.py  firewall.py  internetdb.py  ipapi.py  keycloak.py  mitre.py  opencti.py  opensearch.py  urlscan.py  virustotal.py  wazuh.py
sentinel/audit/: log.py
sentinel/auth/: __init__.py  authz.py  context.py  dependencies.py  jwt.py  oauth.py  pkce.py
sentinel/db/: models.py  session.py
sentinel/mcp/: middleware.py  prompts.py  resources.py  schemas.py  server.py
sentinel/policy/: engine.py
sentinel/tools/: __init__.py  actions.py  alerts.py  confirmation.py  endpoint.py  enrichment.py  identity.py  intel.py  mock_data.py  reports.py
simulator/: __init__.py  bots.py  events.py  iocs.py  main.py  profiles.py  scenarios.py  sink.py
tests/: conftest.py
tests/fixtures/: sample_alerts.json  sample_iocs.json
tests/integration/: test_auth_http.py  test_health.py  test_mcp_protocol.py  test_mcp_streamable.py  test_phase4_tools.py  test_simulator.py
tests/unit/: test_config.py  test_secrets.py
tests/unit/test_adapters/: conftest.py  test_abuse_ch.py  test_abuseipdb.py  test_alienvault.py  test_anthropic.py  test_base.py  test_circl.py  test_dnsbl.py  test_firewall.py  test_internetdb.py  test_ipapi.py  test_keycloak.py  test_mitre.py  test_opencti.py  test_opensearch.py  test_urlscan.py  test_virustotal.py  test_wazuh.py
tests/unit/test_audit/: test_log.py
tests/unit/test_auth/: test_authz.py  test_jwt.py  test_oauth.py  test_pkce.py
tests/unit/test_mcp/: test_middleware.py  test_schemas.py
tests/unit/test_policy/: test_engine.py
tests/unit/test_simulator/: test_bots.py  test_events.py  test_iocs.py  test_profiles.py  test_scenarios.py  test_sink.py
tests/unit/test_tools/: test_actions.py  test_alerts.py  test_endpoint.py  test_identity.py  test_intel.py  test_reports.py
