[project]
name = "sentinel-mcp"
version = "1.0.0"
description = "Production-grade SOC MCP Server — secure bridge between Claude Desktop and your security toolstack"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Sentinel MCP" }]
keywords = ["mcp", "security", "soc", "threat-intelligence", "claude", "anthropic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    # MCP — official Anthropic SDK
    "mcp>=1.27.2",
    # Web framework
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "gunicorn>=26.0.0",
    # Database
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.18.4",
    # Config & validation
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.0.0",
    # Auth
    "authlib>=1.7.2",
    "PyJWT[crypto]>=2.13.0",
    "cryptography>=48.0.0",
    # Observability
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "opentelemetry-instrumentation-httpx>=0.63b0",
    "structlog>=25.5.0",
    # HTTP client
    "httpx>=0.28.1",
    # Retry
    "tenacity>=9.1.4",
    # Redis (rate limiting) — async support built-in since v4.2, no extra needed
    "redis>=8.0.0",
    # OpenSearch (SIEM storage)
    "opensearch-py>=3.2.0",
    # Threat intel
    "OTXv2>=1.5.12",
    "stix2>=3.0.2",
    "dnspython>=2.8.0",
    # Anthropic API (optional narrative generation)
    "anthropic>=0.105.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.15",
    "mypy>=2.1.0",
    "types-redis>=4.6.0.20241004",
    "faker>=37.0.0",
    "factory-boy>=3.3.1",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.uv]
package = true

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RET", "SIM"]
ignore = [
    "S101",   # assert in tests
    "S104",   # bind to 0.0.0.0 in dev
    "S603",   # subprocess calls (needed for OPA fallback)
    "B008",   # function calls in default args (FastAPI Depends)
    "RET504", # unnecessary assignment before return
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S311"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=sentinel",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "-v",
]

[tool.coverage.run]
source = ["sentinel"]
omit = ["*/tests/*", "*/__init__.py", "*/migrations/*"]
